# Rustic

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  Cargo.toml  Dockerfile  README.md  SERVER_IMPLEMENTATION_PLAN.md  SERVER_IMPLEMENTATION_STATUS.md  TODO.md  docker-compose.yml  logs_rustic.txt  package-lock.json  package.json  plan.md  railway.json  story.md  vite.config.js  vite.config.js.timestamp-1779787992031-7aa3090defbd4.mjs
.claude/: settings.local.json
crates/rustic-agent/: Cargo.toml
crates/rustic-agent/examples/: walk_timing_spike.rs
crates/rustic-agent/src/: budget.rs  commit_message.rs  config.rs  file_tree.rs  io_util.rs  lib.rs  model_registry.rs  system_prompt.rs  workspace.rs  worktree_setup.rs
crates/rustic-agent/src/checkpoint/: mod.rs  snapshot.rs
crates/rustic-agent/src/extensions/: mod.rs
crates/rustic-agent/src/file_history/: accumulator.rs  baseline_gate.rs  blob_store.rs  mod.rs  shadow.rs  stat_cache.rs  sweep.rs  tracker.rs  walk.rs  watcher.rs
crates/rustic-agent/src/harness/: auth_check.rs  claude_code.rs  codex.rs  event_map.rs  event_map_codex.rs  jsonrpc.rs  mod.rs  process_spawn.rs  stream_json.rs
crates/rustic-agent/src/index/: VENDORED.md  builder.rs  mod.rs  queries.rs  store.rs  symbol.rs
crates/rustic-agent/src/mcp/: client.rs  config.rs  mod.rs
crates/rustic-agent/src/provider/: claude.rs  compatible.rs  gemini.rs  mod.rs  openai.rs
crates/rustic-agent/src/provider/freebuff/: client.rs  credentials.rs  manager.rs  mod.rs  models.rs
crates/rustic-agent/src/rules/: mod.rs
crates/rustic-agent/src/skills/: mod.rs
crates/rustic-agent/src/task/: ask_user_broker.rs  ceiling_broker.rs  condense.rs  cost.rs  executor.rs  file_lock.rs  goal.rs  goal_loop.rs  mod.rs  orchestrator_host.rs  permission_broker.rs  permissions.rs  repair.rs  retry_now.rs  subagent.rs  terminal_broker.rs  tool_search.rs  user_question_broker.rs
crates/rustic-agent/src/tools/: ask_user.rs  code_intel.rs  complete_task.rs  extension_tools.rs  file_ops.rs  history.rs  media_tools.rs  mod.rs  notebook.rs  orchestrator_tools.rs  patch.rs  search.rs  skill_tools.rs  subagent_tools.rs  terminal.rs  todo_tools.rs  web_tools.rs  workflow_tools.rs  worktree.rs
crates/rustic-agent/src/workflows/: mod.rs
crates/rustic-app/: Cargo.toml
crates/rustic-app/src/: bootstrap.rs  cloud_sync.rs  config.rs  context.rs  github_download.rs  lib.rs  notebook_kernel.rs  path_scope.rs  preview_ops.rs  search_ops.rs  secrets.rs  state.rs  sync_ext.rs  watcher.rs  worktree.rs
crates/rustic-core/: Cargo.toml
crates/rustic-core/src/: io_util.rs  lib.rs
crates/rustic-core/src/buffer/: edit.rs  line_cache.rs  mod.rs  rope.rs
crates/rustic-core/src/config/: keymap.rs  mod.rs  settings.rs  theme.rs
crates/rustic-core/src/formatter/: mod.rs
crates/rustic-core/src/lsp/: client.rs  manager.rs  mod.rs  resolve.rs  transport.rs
crates/rustic-core/src/search/: content_search.rs  file_search.rs  mod.rs
crates/rustic-core/src/syntax/: highlight.rs  languages.rs  mod.rs
crates/rustic-core/src/workspace/: file_tree.rs  mod.rs  project.rs
crates/rustic-db/: Cargo.toml
crates/rustic-db/src/: archive_repo.rs  checkpoint_repo.rs  connection.rs  error.rs  file_history_repo.rs  github_repo.rs  lib.rs  mcp_repo.rs  models.rs  project_repo.rs  settings_repo.rs  task_repo.rs  todo_repo.rs  worktree_repo.rs
crates/rustic-db/src/migrations/: 001_initial.sql  002_agent_tasks.sql  003_checkpoints.sql  004_task_cost.sql  005_drop_mcp_servers.sql  006_subagents.sql  007_message_turn_usage.sql  008_harness_session_id.sql  009_subagent_activity.sql  010_file_history.sql  011_file_history_stat_cache.sql  012_task_todos.sql  013_task_todo_snapshots.sql  014_file_history_shadow.sql  015_task_final_tree_oid.sql  016_project_archived.sql  017_github_issues.sql  018_task_cost_json.sql  019_message_archive.sql  020_file_history_task_writes.sql  021_task_worktrees.sql  022_task_thinking_tier.sql  023_task_pinned.sql  024_task_goal.sql  025_subagent_name.sql  026_drop_task_worktrees.sql  027_project_sort_order.sql
crates/rustic-git/: Cargo.toml
crates/rustic-git/src/: conflict.rs  diff.rs  git_cli.rs  io_util.rs  lib.rs  log.rs  remote.rs  repo.rs  status.rs
crates/rustic-terminal/: Cargo.toml
crates/rustic-terminal/examples/: fullscreen_probe.rs  istty_probe.rs
crates/rustic-terminal/src/: emulator.rs  lib.rs  pty.rs  shell.rs
crates/rustic-treesitter/: Cargo.toml
crates/rustic-treesitter/src/: cache.rs  detect.rs  lib.rs  pool.rs
rustic-server/: Cargo.toml  README.md
rustic-server/src/: api.rs  app.rs  auth.rs  cloudflared.rs  context.rs  git_credentials.rs  hub.rs  lib.rs  main.rs  port_monitor.rs  proxy.rs  ws.rs
rustic-server/src/browser/: cdp.rs  manager.rs  mod.rs  proxy.rs
rustic-server/src/commands/: agent_chat.rs  agent_config.rs  browser.rs  editor.rs  file_history.rs  file_tree.rs  formatters.rs  git.rs  github_auto.rs  meta.rs  mod.rs  notebook.rs  power.rs  preview.rs  process.rs  rules.rs  search.rs  settings.rs  skills.rs  terminal.rs  tunnel.rs  workflows.rs  workspace.rs  worktree.rs
rustic-server/src/github/: client.rs  ingest.rs  mod.rs  webhook.rs  worker.rs
rustic-server/tests/: integration.rs
src-tauri/: Cargo.toml  Pasted text #1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  app_paths.rs  lib.rs  logging.rs  main.rs  path_scope.rs  secrets.rs  state.rs  sync_ext.rs  transport.rs  watcher.rs
src-tauri/src/commands/: agent.rs  agent_terminals.rs  app.rs  checkpoint.rs  cloud_sync.rs  editor.rs  file_history.rs  file_tree.rs  formatters.rs  git.rs  lsp.rs  mod.rs  notebook_kernel.rs  orchestrator_host.rs  preview.rs  rules.rs  search.rs  settings.rs  shell_integration.rs  skills.rs  terminal.rs  workflows.rs  workspace.rs  worktree.rs
src-tauri/src/commands/agent/: audio.rs  harness_models.rs  harness_probe.rs  harness_runtime.rs  harness_slash.rs  mcp.rs  memory.rs  mod.rs  models.rs  project_defaults.rs  runtime.rs  source_control.rs  stream_coalesce.rs
(+385 files in other folders)
