[package]
name = "rustic-server"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "rustic-server"
path = "src/main.rs"

[dependencies]
rustic-app = { workspace = true }
rustic-core = { workspace = true }
rustic-db = { workspace = true }
rustic-agent = { workspace = true }
rustic-git = { workspace = true }
rustic-terminal = { workspace = true }

axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "limit", "set-header"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs", "process", "net", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
hyper = "1"
# Embedded VM browser (web build only): a WebSocket client used both to drive
# Chromium's CDP for one-shot commands and to reverse-proxy the DevTools socket.
# 0.24 matches the version already resolved transitively, so no lock churn.
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
# Network + archive extraction for the GitHub device-flow / repo-install /
# formatter-download commands (mirror the desktop deps + versions exactly).
reqwest = { workspace = true }
form_urlencoded = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
ignore = { workspace = true }
# Constant-time comparison for the auth password/token, and HMAC-signed tokens.
sha2 = { workspace = true }
hmac = "0.12"
subtle = "2"
hex = { workspace = true }
rand = "0.8"
# Process RAM + persistent-volume disk usage for the web status-bar resource monitor.
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }

[lints]
workspace = true
