[package]
name = "rustic"
version = "0.3.4"
edition = "2021"

[lib]
name = "rustic_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# `devtools` enables Tauri's inspect-element / devtools panel. Default-on so
# `cargo run` / `bun run tauri dev` keeps the inspector. Build production
# binaries with `cargo build --release --no-default-features` to exclude it.
default = ["devtools"]
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs", "process", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
zip = { version = "2", features = ["deflate"] }
tar = "0.4"
flate2 = "1"
form_urlencoded = "1"
base64 = "0.22"
# keyring v3 ships with NO backend features by default — without one, Entry::new
# falls back to a mock store that silently accepts writes and returns NoEntry on
# reads, so configured API keys vanish across launches. Enable the per-platform
# native backend so secrets actually persist (Windows Credential Manager, macOS
# Keychain, Linux libsecret via D-Bus).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# P1.8: needed to convert the goal-loop's String-error termination back to
# the anyhow::Error type the rest of send_message threads through.
anyhow = "1"

rustic-core = { path = "../crates/rustic-core" }
rustic-db = { path = "../crates/rustic-db" }
rustic-agent = { path = "../crates/rustic-agent" }
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-full = "0.4"
ignore = "0.4"

rustic-git = { path = "../crates/rustic-git" }
rustic-terminal = { path = "../crates/rustic-terminal" }
