[package]
name = "rustic"
version = "0.4.4"
edition = "2021"

[lib]
name = "rustic_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# `devtools` is now enabled unconditionally on the `tauri` dependency below, so
# the inspect-element / devtools panel ships in EVERY build — including release
# bundles built with `--no-default-features`. This feature flag is kept as a
# (now redundant) no-op so existing build scripts referencing it don't break.
default = ["devtools"]
devtools = []

[dependencies]
# `devtools` is listed here (not behind a feature) on purpose: release bundles
# are built with `--no-default-features`, which would otherwise strip the
# inspector. Keeping it on the dep guarantees inspect-element in every build.
tauri = { version = "2", features = ["image-png", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs", "process", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
zip = { version = "2", features = ["deflate"] }
tar = "0.4"
flate2 = "1"
form_urlencoded = "1"
base64 = "0.22"
# keyring v3 ships with NO backend features by default — without one, Entry::new
# falls back to a mock store that silently accepts writes and returns NoEntry on
# reads, so configured API keys vanish across launches. Enable the per-platform
# native backend so secrets actually persist (Windows Credential Manager, macOS
# Keychain, Linux libsecret via D-Bus).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# P1.8: needed to convert the goal-loop's String-error termination back to
# the anyhow::Error type the rest of send_message threads through.
anyhow = "1"

rustic-app = { path = "../crates/rustic-app" }
rustic-core = { path = "../crates/rustic-core" }
rustic-db = { path = "../crates/rustic-db" }
rustic-agent = { path = "../crates/rustic-agent" }
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-full = "0.4"
ignore = "0.4"

rustic-git = { path = "../crates/rustic-git" }
rustic-terminal = { path = "../crates/rustic-terminal" }
