[package]
name = "rustic"
version = "0.4.6"
edition = "2021"

[lib]
name = "rustic_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# `devtools` is now enabled unconditionally on the `tauri` dependency below, so
# the inspect-element / devtools panel ships in EVERY build — including release
# bundles built with `--no-default-features`. This feature flag is kept as a
# (now redundant) no-op so existing build scripts referencing it don't break.
default = ["devtools"]
devtools = []

[dependencies]
# `devtools` is listed here (not behind a feature) on purpose: release bundles
# are built with `--no-default-features`, which would otherwise strip the
# inspector. Keeping it on the dep guarantees inspect-element in every build.
tauri = { version = "2", features = ["image-png", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs", "process", "net", "signal"] }
reqwest = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
form_urlencoded = { workspace = true }
base64 = { workspace = true }
# keyring v3 ships with NO backend features by default — without one, Entry::new
# falls back to a mock store that silently accepts writes and returns NoEntry on
# reads, so configured API keys vanish across launches. Enable the per-platform
# native backend so secrets actually persist (Windows Credential Manager, macOS
# Keychain, Linux libsecret via D-Bus).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
# P1.8: needed to convert the goal-loop's String-error termination back to
# the anyhow::Error type the rest of send_message threads through.
anyhow = { workspace = true }

rustic-app = { workspace = true }
rustic-core = { workspace = true }
rustic-db = { workspace = true }
rustic-agent = { workspace = true }
ignore = { workspace = true }

rustic-git = { workspace = true }
rustic-terminal = { workspace = true }

[lints]
workspace = true
