[package]
name = "rustic-app"
version = "0.3.9"
edition = "2021"

# Transport-agnostic application layer shared by both the Tauri desktop shell
# (`src-tauri`) and the headless web server (`rustic-server`). Contains NO
# dependency on `tauri` or any webview engine — that is what lets the server
# binary run without linking a webview (the RAM saving). The desktop-specific
# bits (window control, keychain, native paths) stay in `src-tauri` and are
# injected through the `AppContext` / `SecretStore` traits defined here.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "time"] }

rustic-core = { workspace = true }
rustic-db = { workspace = true }
rustic-agent = { workspace = true }
rustic-git = { workspace = true }
rustic-terminal = { workspace = true }

base64 = { workspace = true }
notify = { workspace = true, features = ["macos_fsevent"] }
reqwest = { workspace = true }
ignore = { workspace = true }

[lints]
workspace = true
