[package]
name = "rustic-db"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
