[package]
name = "rustic-git"
version = "0.2.0"
edition = "2021"

[dependencies]
rustic-io = { workspace = true }
serde = { workspace = true }
# Pure-Rust git via gitoxide. `tree-editor` keeps the workspace feature-resolved
# version aligned with `rustic-agent`'s shadow store. Operations gix doesn't
# yet implement (merge, rebase, worktree mutation) go through the `git` CLI;
# see docs/educated-guesses/003 + 006 for the rationale.
gix = { workspace = true }
anyhow = { workspace = true }
# For encoding the GitHub token into an `Authorization: Basic …` header on git
# smart-HTTP requests. GitHub rejects Bearer for the git endpoint, only Basic.
base64 = { workspace = true }

[lints]
workspace = true
